[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.10.0"
dependencies = [
    "numpy<2.0",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=3.3.1",
    "streamlit>=1.41.1",
    "streamlit-plotly-events>=0.0.6",
    "torch<2.3.0",
    "umap-learn>=0.5.7",
]
